reworded contact intro and site summary

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -30,7 +30,7 @@
 
       <div id="columnRight" class="grid_6">
         <div id="siteSummary">
-          <h2 class="subHeader">"Devon based amateur photographer...<br/>...and wannabe freelance web designer"</h2>
+          <h2 class="subHeader">"Devon based amateur photographer...<br/>...and part-time web wizard"</h2>
         </div><!-- siteSummary -->
         <p>At the moment this website is under construction (if you can't tell from the relative lack of content and sometimes dodgy presentation). However there are some examples of my photographic works over in the gallery and if you like what you see then feel free to get in touch to say "hey good job", or "I would like to ask about prints", just hopefully nothing along the lines of "I am outside your bedroom window with a camera please turn around so I can get a better view". I hope you enjoy using this site and come back to check on it's progress!</p>
         <h2 class="sectionHeader">Latest Public Exposures</h2>
