google analytics event tracking test

--- a/public_html/gallery/index.html
+++ b/public_html/gallery/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="galleryThumb grid_3">
-            <a href="wildlife.html">
+            <a href="wildlife.html" onclick="_gaq.push(['_trackEvent', 'View Gallery', 'Click', 'View Wildlife Gallery']);">
               <img class="imageThumb" src="../images/gallery/wildlife/Little Nipper (website).jpg" alt="An image of a baby crocodile resting on a log" title="Little Nipper" />
             </a>
             <p>Wildlife</p>
