--- a/public_html/gallery/index.html
+++ b/public_html/gallery/index.html
@@ -24,21 +24,21 @@
         </div>
 
         <div class="galleryThumb grid_3">
-            <a href="wildlife.html" onclick="_gaq.push(['_trackEvent', 'View Gallery', 'Click', 'View Wildlife Gallery']);">
+            <a href="wildlife.html" onclick="ga('send', 'event', 'View Gallery', 'Click', 'Wildlife Gallery');">
               <img class="imageThumb" src="../images/gallery/wildlife/Little Nipper (website).jpg" alt="An image of a baby crocodile resting on a log" title="Little Nipper" />
             </a>
             <p>Wildlife</p>
         </div><!-- galleryThumb -->
 
         <div class="galleryThumb grid_3">
-            <a href="stilllife.html">
+            <a href="stilllife.html" onclick="ga('send', 'event', 'View Gallery', 'Click', 'Still Life Gallery');">
               <img class="imageThumb" src="../images/gallery/still life/First to Fall (website).jpg" alt="An image of a fallen apple amongst autumn leaves" title="First to Fall" />
             </a>
             <p>Still Life</p>
         </div><!-- galleryThumb -->
 
         <div class="galleryThumb grid_3">
-            <a href="landscapes.html">
+            <a href="landscapes.html" onclick="ga('send', 'event', 'View Gallery', 'Click', 'Landscapes Gallery');">
               <img class="imageThumb" src="../images/gallery/landscapes/Heavens Ridge (website).jpg" alt="An image of the devils cauldron section of lydford gorge" title="Devils Cauldron"/>
             </a>
             <p>Landscapes</p>
