added new landing page explaining the expanding of sites scope

--- a/public_html/about.html
+++ b/public_html/about.html
@@ -7,7 +7,7 @@
   <body>
     <nav>
       <ul>
-        <li><a href="index.html" class="navbtn">Home</a></li>
+        <li><a href="photography.html" class="navbtn">Home</a></li>
         <li><a href="gallery/index.html" class="navbtn">Gallery</a></li>
         <li><a href="#" class="navbtn">Blog</a></li>
         <li><a href="about.html" class="navbtncur">About</a></li>
