--- a/public_html/gallery/index.html
+++ b/public_html/gallery/index.html
@@ -7,8 +7,8 @@
   <body>
     <nav>
       <ul>
-        <li><a href="../index.html" class="navbtn">Home</a></li>
-        <li><a href="gallery/index.html" class="navbtncur">Gallery</a></li>
+        <li><a href="../photography.html" class="navbtn">Home</a></li>
+        <li><a href="index.html" class="navbtncur">Gallery</a></li>
         <li><a href="#" class="navbtn">Blog</a></li>
         <li><a href="../about.html" class="navbtn">About</a></li>
         <li><a href="../contact.php" class="navbtn">Contact</a></li>
