--- a/public_html/gallery/landscapes.html
+++ b/public_html/gallery/landscapes.html
@@ -9,7 +9,7 @@
     <body>
       <nav>
         <ul>
-          <li><a href="../index.html" class="navbtn">Home</a></li>
+          <li><a href="../photography.html" class="navbtn">Home</a></li>
           <li><a href="index.html" class="navbtncur">Gallery</a></li>
           <li><a href="#" class="navbtn">Blog</a></li>
           <li><a href="../about.html" class="navbtn">About</a></li>
