--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Nigel Pain Photography - Home</title>
     <link href="css/styles.css", type="text/css", rel="stylesheet">
