--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,10 @@
     <p>
       If you would like to access the old site <a href="photography.html">click here</a>
     </p>
-    
+    <p>
+      Testing CI deployment
+    </p>
+
     <!-- google analytics code -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
