gulp task to concatenate and minify css files

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <title>Nigel Pain Photography - Home</title>
+    <!--build:css css/styles.min.css-->
     <link href="css/styles.css", type="text/css", rel="stylesheet">
+    <!--endbuild-->
   </head>
   <body>
     <p>
