--- a/app/photography.html
+++ b/app/photography.html
@@ -2,13 +2,15 @@
 <html>
   <head>
     <title>Nigel Pain Photography - Home</title>
+    <!--build:css css/styles.min.css-->
     <link href="css/styles.css", type="text/css", rel="stylesheet">
+    <!--endbuild-->
   </head>
   <body>
     <nav>
       <ul>
         <li><a href="photography.html" class="navbtncur">Home</a></li>
-        <li><a href="gallery/index.html" class="navbtn">Gallery</a></li>
+        <li><a href="gallery.html" class="navbtn">Gallery</a></li>
         <li><a href="#" class="navbtn">Blog</a></li>
         <li><a href="about.html" class="navbtn">About</a></li>
         <li><a href="contact.php" class="navbtn">Contact</a></li>
