--- a/app/landscapes.html
+++ b/app/landscapes.html
@@ -2,18 +2,20 @@
 <html>
   <head>
     <title>Nigel Pain Photography - Landscapes Gallery</title>
-    <link href="../css/styles.css", type="text/css", rel="stylesheet">
-    <link href="../css/lightbox.css" rel="stylesheet">
+    <!--build:css css/styles.min.css-->
+    <link href="css/styles.css", type="text/css", rel="stylesheet">
+    <link href="css/lightbox.css" rel="stylesheet">
+    <!--endbuild-->
   </head>
   <body>
     <body>
       <nav>
         <ul>
-          <li><a href="../photography.html" class="navbtn">Home</a></li>
-          <li><a href="index.html" class="navbtncur">Gallery</a></li>
+          <li><a href="photography.html" class="navbtn">Home</a></li>
+          <li><a href="gallery.html" class="navbtncur">Gallery</a></li>
           <li><a href="#" class="navbtn">Blog</a></li>
-          <li><a href="../about.html" class="navbtn">About</a></li>
-          <li><a href="../contact.php" class="navbtn">Contact</a></li>
+          <li><a href="about.html" class="navbtn">About</a></li>
+          <li><a href="contact.php" class="navbtn">Contact</a></li>
         </ul>
       </nav>
       <div id="page" class="container_12 clearfix">
