--- a/app/wildlife.html
+++ b/app/wildlife.html
@@ -41,8 +41,10 @@
       </div><!-- galleryThumb -->
     </div><!-- page -->
 
-    <!-- lightbox js code -->
-    <script src="../js/lightbox-plus-jquery.js"></script>
+    <!--build:js js/main.min.js-->
+    <script type="text/javascript" src="js/recent_photos.js"></script>
+    <script type="text/javascript" src="js/lightbox-plus-jquery.js"></script>
+    <!--endbuild-->
     <!-- google analytics code -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
