--- a/app/gallery.html
+++ b/app/gallery.html
@@ -2,9 +2,7 @@
 <html>
   <head>
     <title>Nigel Pain Photography - Gallery Index</title>
-    <!--build:css css/styles.min.css-->
-    <link href="css/styles.css", type="text/css", rel="stylesheet">
-    <!--endbuild-->
+    <link href="css/main.css", type="text/css", rel="stylesheet">
   </head>
   <body>
     <nav>
