--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
   <head>
     <title>Nigel Pain Photography - Home</title>
-    <!--build:css css/styles.min.css-->
-    <link href="css/styles.css", type="text/css", rel="stylesheet">
-    <!--endbuild-->
+    <link href="css/main.css", type="text/css", rel="stylesheet">
   </head>
   <body>
     <p>
