--- a/app/landscapes.html
+++ b/app/landscapes.html
@@ -2,10 +2,7 @@
 <html>
   <head>
     <title>Nigel Pain Photography - Landscapes Gallery</title>
-    <!--build:css css/styles.min.css-->
-    <link href="css/styles.css", type="text/css", rel="stylesheet">
-    <link href="css/lightbox.css" rel="stylesheet">
-    <!--endbuild-->
+    <link href="css/main.css", type="text/css", rel="stylesheet">
   </head>
   <body>
     <body>
