fixed some relative img paths following gulp setup

--- a/app/gallery.html
+++ b/app/gallery.html
@@ -16,7 +16,7 @@
     </nav>
     <div id="page" class="container_12 clearfix">
       <header class="grid_12">
-        <img src="../images/Header Logo.png" alt="Website Logo">
+        <img src="images/Header Logo.png" alt="Website Logo">
       </header>
       <div id="galleries" class="container_12">
         <div class="grid_12">
@@ -25,21 +25,21 @@
 
         <div class="galleryThumb grid_3">
             <a href="wildlife.html" onclick="ga('send', 'event', 'View Gallery', 'Click', 'Wildlife Gallery');">
-              <img class="imageThumb" src="../images/gallery/wildlife/Little Nipper (website).jpg" alt="An image of a baby crocodile resting on a log" title="Little Nipper" />
+              <img class="imageThumb" src="images/gallery/wildlife/Little Nipper (website).jpg" alt="An image of a baby crocodile resting on a log" title="Little Nipper" />
             </a>
             <p>Wildlife</p>
         </div><!-- galleryThumb -->
 
         <div class="galleryThumb grid_3">
             <a href="stilllife.html" onclick="ga('send', 'event', 'View Gallery', 'Click', 'Still Life Gallery');">
-              <img class="imageThumb" src="../images/gallery/still life/First to Fall (website).jpg" alt="An image of a fallen apple amongst autumn leaves" title="First to Fall" />
+              <img class="imageThumb" src="images/gallery/still life/First to Fall (website).jpg" alt="An image of a fallen apple amongst autumn leaves" title="First to Fall" />
             </a>
             <p>Still Life</p>
         </div><!-- galleryThumb -->
 
         <div class="galleryThumb grid_3">
             <a href="landscapes.html" onclick="ga('send', 'event', 'View Gallery', 'Click', 'Landscapes Gallery');">
-              <img class="imageThumb" src="../images/gallery/landscapes/Heavens Ridge (website).jpg" alt="An image of the devils cauldron section of lydford gorge" title="Devils Cauldron"/>
+              <img class="imageThumb" src="images/gallery/landscapes/Heavens Ridge (website).jpg" alt="An image of the devils cauldron section of lydford gorge" title="Devils Cauldron"/>
             </a>
             <p>Landscapes</p>
         </div><!-- galleryThumb -->
