--- a/app/about.html
+++ b/app/about.html
@@ -18,7 +18,7 @@
     <div id="page" class="container_12 clearfix">
 
       <header class="grid_12">
-        <img src="./images/Header Logo.png" alt="Website Logo">
+        <img src="images/Header Logo.png" alt="Website Logo">
       </header>
 
       <div id="columnLeft" class="grid_7">
@@ -29,7 +29,7 @@
       </div>
 
       <div id="columnRight" class="grid_5">
-        <img id="mePhoto" src="./images/Out In The Field.jpg" alt="Photograph of Me">
+        <img id="mePhoto" src="images/Out In The Field.jpg" alt="Photograph of Me">
       </div>
 
     </div><!-- page -->
