--- a/app/landscapes.html
+++ b/app/landscapes.html
@@ -17,7 +17,7 @@
       </nav>
       <div id="page" class="container_12 clearfix">
         <header class="grid_12">
-          <img src="../images/Header Logo.png" alt="Website Logo">
+          <img src="images/Header Logo.png" alt="Website Logo">
         </header>
 
         <div class="grid_12">
@@ -25,26 +25,26 @@
         </div>
 
         <div class="galleryThumb grid_3">
-            <a href="../images/gallery/landscapes/Devils Cauldron (website).jpg" rel="lightbox" data-lightbox="landscapes" title="The power of water is very much apparent at the 'Devils Cauldron' in Lydford Gorge, a whirling torrent of nature, anyone unlucky enough to slip on their way down really would be 'dead meat for the Devils Cauldron'">
-              <img class="imageThumb" src="../images/gallery/landscapes/Devils Cauldron (website).jpg" alt="An image of the devils cauldron section of lydford gorge" title="Devils Cauldron" />
+            <a href="images/gallery/landscapes/Devils Cauldron (website).jpg" rel="lightbox" data-lightbox="landscapes" title="The power of water is very much apparent at the 'Devils Cauldron' in Lydford Gorge, a whirling torrent of nature, anyone unlucky enough to slip on their way down really would be 'dead meat for the Devils Cauldron'">
+              <img class="imageThumb" src="images/gallery/landscapes/Devils Cauldron (website).jpg" alt="An image of the devils cauldron section of lydford gorge" title="Devils Cauldron" />
             </a>
             <p>Devils Cauldron</p>
         </div><!-- galleryThumb -->
         <div class="galleryThumb grid_3">
-            <a href="../images/gallery/landscapes/Heavens Ridge (website).jpg" rel="lightbox" data-lightbox="landscapes" title="This was my second attempt at a classic West Devon landscape shot, that of Brent Tor. As the sun began to set it lit up the edge of the tor drawing a line all the way up to the church.">
-              <img class="imageThumb" src="../images/gallery/landscapes/Heavens Ridge (website).jpg" alt="An image of a sunset over Brent Tor church" title="Heavens Ridge" />
+            <a href="images/gallery/landscapes/Heavens Ridge (website).jpg" rel="lightbox" data-lightbox="landscapes" title="This was my second attempt at a classic West Devon landscape shot, that of Brent Tor. As the sun began to set it lit up the edge of the tor drawing a line all the way up to the church.">
+              <img class="imageThumb" src="images/gallery/landscapes/Heavens Ridge (website).jpg" alt="An image of a sunset over Brent Tor church" title="Heavens Ridge" />
             </a>
             <p>Heavens Ridge</p>
         </div><!-- galleryThumb -->
         <div class="galleryThumb grid_3">
-            <a href="../images/gallery/landscapes/A Bridge into Autumn (website).jpg" rel="lightbox" data-lightbox="landscapes" title="It's surprising what beauty we become blind to, I drive over this bridge every day on my commute, it wasn't until I stopped on my way to a shoot one autumn morning and took in the scene that I appreciated it fully.">
-              <img class="imageThumb" src="../images/gallery/landscapes/A Bridge into Autumn (website).jpg" alt="An image of an autumnal river" title="A Bridge into Autumn" />
+            <a href="images/gallery/landscapes/A Bridge into Autumn (website).jpg" rel="lightbox" data-lightbox="landscapes" title="It's surprising what beauty we become blind to, I drive over this bridge every day on my commute, it wasn't until I stopped on my way to a shoot one autumn morning and took in the scene that I appreciated it fully.">
+              <img class="imageThumb" src="images/gallery/landscapes/A Bridge into Autumn (website).jpg" alt="An image of an autumnal river" title="A Bridge into Autumn" />
             </a>
             <p>A Bridge into Autumn</p>
         </div><!-- galleryThumb -->
         <div class="galleryThumb grid_3">
-            <a href="../images/gallery/landscapes/River Runs Through Murkwood (website).jpg" rel="lightbox" data-lightbox="landscapes" title="I was out one cold autumn afternoon exploring Shaugh Prior in Devon looking for good woodland shots. This one I took of the rocky river winding up amongst the gnarled shaded trees reminded me of Mirkwood from the Lord of the Rings. I took some creative liberties with photoshop, but I feel I've kept the atmosphere from that day.">
-              <img class="imageThumb" src="../images/gallery/landscapes/River Runs Through Murkwood (website).jpg" alt="An image of a mysterious wooded river" title="River Runs Through Murkwood" />
+            <a href="images/gallery/landscapes/River Runs Through Murkwood (website).jpg" rel="lightbox" data-lightbox="landscapes" title="I was out one cold autumn afternoon exploring Shaugh Prior in Devon looking for good woodland shots. This one I took of the rocky river winding up amongst the gnarled shaded trees reminded me of Mirkwood from the Lord of the Rings. I took some creative liberties with photoshop, but I feel I've kept the atmosphere from that day.">
+              <img class="imageThumb" src="images/gallery/landscapes/River Runs Through Murkwood (website).jpg" alt="An image of a mysterious wooded river" title="River Runs Through Murkwood" />
             </a>
             <p>River Runs Through Murkwood</p>
         </div><!-- galleryThumb -->
