--- a/app/photography.html
+++ b/app/photography.html
@@ -18,7 +18,7 @@
     <div id="page" class="container_12 clearfix">
 
       <header class="grid_12">
-        <img src="./images/Header Logo.png" alt="Website Logo">
+        <img src="images/Header Logo.png" alt="Website Logo">
       </header>
 
       <div id="columnLeft" class="grid_6">
@@ -36,7 +36,7 @@
         <h2 class="sectionHeader">Latest Public Exposures</h2>
         <img id="recentPhotos" src="images/recent photos/First to Fall (website).jpg" alt="Recently Added Photos" />
 
-        <p><a href="gallery/index.html">See more snappings at the gallery...</a></p>
+        <p><a href="gallery.html">See more snappings at the gallery...</a></p>
       </div><!-- columnRight -->
 
     </div><!-- page -->
