--- a/app/stilllife.html
+++ b/app/stilllife.html
@@ -16,7 +16,7 @@
     </nav>
     <div id="page" class="container_12 clearfix">
       <header class="grid_12">
-        <img src="../images/Header Logo.png" alt="Website Logo">
+        <img src="images/Header Logo.png" alt="Website Logo">
       </header>
 
       <div class="grid_12">
@@ -24,15 +24,15 @@
       </div>
 
       <div class="galleryThumb grid_3">
-          <a href="../images/gallery/still life/First to Fall (website).jpg" rel="lightbox" data-lightbox="still life" title="With this photograph I wanted to try and capture that feeling when the first apples of the season have fallen, a sign of all the tasty things to come!">
-            <img class="imageThumb" src="../images/gallery/still life/First to Fall (website).jpg" alt="An image of a fallen apple amongst autumn leaves" title="First to Fall" />
+          <a href="images/gallery/still life/First to Fall (website).jpg" rel="lightbox" data-lightbox="still life" title="With this photograph I wanted to try and capture that feeling when the first apples of the season have fallen, a sign of all the tasty things to come!">
+            <img class="imageThumb" src="images/gallery/still life/First to Fall (website).jpg" alt="An image of a fallen apple amongst autumn leaves" title="First to Fall" />
           </a>
           <p>First to Fall</p>
       </div><!-- galleryThumb -->
 
       <div class="galleryThumb grid_3">
-          <a href="../images/gallery/still life/Forgotten Love (website).jpg" rel="lightbox" data-lightbox="still life" title="This was one of my first still life photography projects that I undertook! My aim with this photo was to convey a sombre mood and really provoke the viewer into thinking beyond the photo. What is in the letter? And what happened to it's recipient?">
-            <img class="imageThumb" src="../images/gallery/still life/Forgotten Love (website).jpg" alt="An image of a forgotten letter of love" title="Forgotten Love" />
+          <a href="images/gallery/still life/Forgotten Love (website).jpg" rel="lightbox" data-lightbox="still life" title="This was one of my first still life photography projects that I undertook! My aim with this photo was to convey a sombre mood and really provoke the viewer into thinking beyond the photo. What is in the letter? And what happened to it's recipient?">
+            <img class="imageThumb" src="images/gallery/still life/Forgotten Love (website).jpg" alt="An image of a forgotten letter of love" title="Forgotten Love" />
           </a>
           <p>Forgotten Love</p>
       </div><!-- galleryThumb -->
